--- a/src/app/home/components/ticket-status/ticket-status.component.html
+++ b/src/app/home/components/ticket-status/ticket-status.component.html
@@ -1,26 +1,26 @@
 <div class="card ticket-status">
   <div class="row">
     <span class="label">Total</span>
-    <span class="value">{{ boletos.total }}</span>
+    <span class="value">{{ total }}</span>
   </div>
 
   <div class="status-row">
     <div class="status-item available">
       <div class="icon"></div>
       <span>Disponibles</span>
-      <span class="count">{{ boletos.disponibles }}</span>
+      <span class="count">{{ disponibles }}</span>
     </div>
 
     <div class="status-item reserved">
       <div class="icon"></div>
       <span>Apartados</span>
-      <span class="count">{{ boletos.apartados }}</span>
+      <span class="count">{{ apartados }}</span>
     </div>
 
     <div class="status-item sold">
       <div class="icon"></div>
       <span>Vendidos</span>
-      <span class="count">{{ boletos.vendidos }}</span>
+      <span class="count">{{ vendidos }}</span>
     </div>
   </div>
 </div>
