--- a/src/app/home/components/dashboard-home/dashboard-home.component.html
+++ b/src/app/home/components/dashboard-home/dashboard-home.component.html
@@ -1,11 +1,12 @@
 <app-menu-settings *ngIf="menuAbierto" (cerrar)="toggleMenu()"></app-menu-settings>
 
-<app-total-raffles style="margin: 10px; margin: 2rem 1rem;" 
-  [total]="sorteos.length"
-  (selectSorteo)="abrirSelectorDeSorteo()">
-</app-total-raffles>
+  <app-total-raffles 
+    [total]="sorteos.length"
+    (selectSorteo)="abrirSelectorDeSorteo()">
+  </app-total-raffles>
 
-<!-- Dashboard por cada sorteo con acordeón -->
+
+  <!-- 🔁 Dashboard por cada sorteo con acordeón -->
 <div class="dashboard-container" *ngFor="let sorteo of sorteos; let i = index">
   <button class="sorteo-header" (click)="toggleSorteo(i)">
     Sorteo #{{ i + 1 }}
@@ -13,25 +14,31 @@
   </button>
 
   <div *ngIf="sorteosVisibles[i]" class="sorteo-content">
-<app-ticket-status [boletos]="sorteo.boletos"></app-ticket-status>
+    <app-ticket-status [boletos]="sorteo.boletos"   (estadoSeleccionado)="filtrarYRedirigir(sorteo.id, $event)">
+></app-ticket-status>
 
-<app-total-revenue 
-  [recaudado]="sorteo.recaudado" 
-  [porRecaudar]="sorteo.porRecaudar">
-</app-total-revenue>
+    <app-total-revenue 
+      [recaudado]="sorteo.recaudado" 
+      [porRecaudar]="sorteo.porRecaudar">
+    </app-total-revenue>
 
-  <div class="top-wrapper">
-  <app-top-buyers [buyers]="sorteo.topBuyers"></app-top-buyers>
-  <app-top-sellers [sellers]="sorteo.topSellers"></app-top-sellers>
-</div>
+    <div class="top-wrapper">
+      <app-top-buyers [buyers]="sorteo.topBuyers"></app-top-buyers>
+      <app-top-sellers [sellers]="sorteo.topSellers"></app-top-sellers>
+    </div>
+
     <app-sales-progress [progress]="sorteo.progresoVentas"></app-sales-progress>
-    <app-next-raffle [deadline]="proximoSorteo"></app-next-raffle>
   </div>
+
 </div>
+    <app-next-raffle [deadline]="proximoSorteo" style="  padding: 1rem;
+  "></app-next-raffle>
+
+  <app-recent-activity [notificaciones]="[]"></app-recent-activity>
 
 
-<app-recent-activity [notificaciones]="[]"></app-recent-activity>
 
+<!-- Modal de selector -->
 <app-sorteo-selector
   *ngIf="mostrarSelector"
   [sorteos]="sorteos"
@@ -43,6 +50,3 @@
   (abrirModalSorteos)="abrirSelectorDeSorteo()" 
   (abrirMenuConfig)="toggleMenu()">
 </app-menu-bottom>
-
-
-
