--- a/src/app/home/components/ticket-status/ticket-status.component.html
+++ b/src/app/home/components/ticket-status/ticket-status.component.html
@@ -5,19 +5,19 @@
   </div>
 
   <div class="status-row">
-    <div class="status-item available">
+    <div class="status-item available" (click)="seleccionarEstado('disponible')">
       <div class="icon"></div>
       <span>Disponibles</span>
       <span class="count">{{ disponibles }}</span>
     </div>
 
-    <div class="status-item reserved">
+    <div class="status-item reserved" (click)="seleccionarEstado('ocupado')">
       <div class="icon"></div>
       <span>Apartados</span>
       <span class="count">{{ apartados }}</span>
     </div>
 
-    <div class="status-item sold">
+    <div class="status-item sold" (click)="seleccionarEstado('pagado')">
       <div class="icon"></div>
       <span>Vendidos</span>
       <span class="count">{{ vendidos }}</span>
