--- a/src/app/home/components/total-raffles/total-raffles.component.html
+++ b/src/app/home/components/total-raffles/total-raffles.component.html
@@ -1,7 +1,25 @@
-<div class="total-raffles-card" (click)="abrirModal()">
-  <div class="title-wrapper">
-    <h2 class="title">{{ total }} sorteos activos</h2>
-        <button class="create-button">+ Crear sorteo</button>
-
+<div class="total-raffles-card card">
+  <div class="info">
+    <div class="text">
+      <p class="title">Sorteos</p>
+      <p class="number">{{ total }}</p>
+    </div>
+    <button class="btn-solicitar" (click)="abrirModal()">Solicitar</button>
   </div>
+
+  <!-- Lista de sorteos como botones blancos -->
+  <div class="sorteos-list">
+    <button 
+      class="sorteo-btn" 
+      *ngFor="let sorteo of sorteos" 
+      (click)="seleccionarSorteo(+sorteo.id)">
+      {{ sorteo.nombre || ('Sorteo #' + sorteo.id) }}
+    </button>
+  </div>
+
+  <app-solicitar-modal 
+    [visible]="modalAbierto"
+    (closed)="cerrarModal()"
+    >
+  </app-solicitar-modal>
 </div>
