--- a/src/app/home/components/total-raffles/total-raffles.component.scss
+++ b/src/app/home/components/total-raffles/total-raffles.component.scss
@@ -1,11 +1,9 @@
 .total-raffles-card {
-  background-color: white;
   border-radius: 1.25rem;
   padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
 
 .title-wrapper {
@@ -18,6 +16,7 @@
 .title {
   font-size: 1.25rem;
   font-weight: 700;
+  margin: 10px;
   color: #111827;
 }
 
@@ -38,3 +37,46 @@
   font-weight: 700;
   margin-right: 4px;
 }
+.total-raffles-card {
+  border-radius: 1rem;
+  padding: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+
+
+.number {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 0;
+  margin-left: 30px;
+}
+
+.btn-solicitar {
+  background: #6a0dad;
+  color: #fff;
+  padding: 0.6rem 1.2rem;
+  border-radius: 1rem;
+  border: none;
+  font-weight: 600;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out;
+
+  &:hover {
+    background: #520c94;
+  }
+}
+
+
