--- a/src/app/dashboard/components/menu-settings/menu-settings.component.html
+++ b/src/app/dashboard/components/menu-settings/menu-settings.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="menu-section">
-    <h3><i class="fa-solid fa-gift"></i> Sorteo</h3>
+    <h3><i class="fa-solid fa-gift" (click)="goToSorteo()"></i> Sorteo</h3>
     <ul>
       <li><i class="fa-solid fa-circle-info"></i> Información del sorteo</li>
       <li><i class="fa-solid fa-chart-line"></i> Estadísticas</li>
@@ -16,9 +16,8 @@
   </div>
 
   <div class="menu-section">
-    <h3><i class="fa-solid fa-gear"></i> Configuración</h3>
     <ul>
       <li (click)="logout()"><i class="fa-solid fa-right-from-bracket"></i> Cerrar sesión</li>
     </ul>
   </div>
-</div>
+</div>  
